--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,3 +1,10 @@
 $back-color: #323232;
 $foto-back-color: #afafaf;
 $text-color: #ffffff;
+$headline-after-mobile: 16px;
+$headline-before-mobile: 24px;
+$section-header-font-size: 24px;
+ 
+  
+
+
