--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -1,5 +1,6 @@
+$font-family: "Avenir LT Pro", sans-serif;
 $back-color: #323232;
-$foto-back-color: #afafaf;
+$foto-back-color: #e1e1e1;
 $text-color: #ffffff;
 $headline-after-mobile: 16px;
 $headline-before-mobile: 24px;
