--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,97 +1,153 @@
 @use "variables" as *;
 @use "mixins.scss" as *;
 
+@import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
+
+/*
 @font-face {
-    font-family: avenir-next-regular, sans-serif, times, serif;
-    src: url(../../assets/Font/AvenirNextLTPro-Regular.otf);
+  font-family: "Avenir LT Pro";
+  font-weight: normal;
+  font-style: normal;
+  src: url(../../assets/Font/AvenirNextLTPro-Regular.otf) format("opentype");
 }
 
-*{
-    box-sizing: border-box;
-    margin: 0;
-    text-decoration: none;
-    font-family: avenir-next-regular, sans-serif, times, serif;
-   
+@font-face {
+  font-family: "Avenir LT Pro";
+  font-weight: bold;
+  font-style: normal;
+  src: url(../../assets/Font/AvenirNextLTPro-Bold.otf) format("opentype");
 }
-.header{
-    background-color: $back-color;
-    color: $text-color;
-    width: 100%;
-    height: 40%;
-    padding-top: $headline-before-mobile;
-    padding-bottom: $headline-after-mobile;
-    @include tablet{
-        display: flex;
-        flex-direction: row;
-    }
-   
-    text-align: center;
-    &__logo{
-        @include logo;
-    }
+*/
 
-    
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+  text-decoration: none;
 }
-.navbar__list{
+
+body {
+  font-family: $font-family;
+}
+
+.header {
+  background-color: $back-color;
+  color: $text-color;
+  width: 100%;
+  height: 40%;
+  padding-top: $headline-before-mobile;
+  padding-bottom: $headline-after-mobile;
+  text-align: center;
+
+  &__logo {
+    @include logo;
+  }
+
+.navbar__list {
     display: flex;
     flex-direction: row;
     width: 100%;
     text-align: center;
     list-style: none;
     padding: 0;
-    @include subheader_mobile;
-    @include header_mobile;
     padding-top: 1rem;
-    
 
-    &--item{
-        width: 50%;
-        font-weight: 400;
-        
-        &-underline{
-            border-bottom: 4px solid $text-color;
-            font-weight: 600;
-            padding-left: 0;
-            margin-bottom: -16px;
-        }
+    &--item {
+      width: 50%;
+      font-weight: 400;
+
+      &-underline {
+        border-bottom: 4px solid $text-color;
+        font-weight: 600;
+        padding-left: 0;
+        margin-bottom: -16px;
+      }
     }
-    
+  }
+
+  @include tablet {
+    display: flex;
+    flex-direction: row;
+
+    .header__Logo {
+      padding: 0 16px;
+    }
+
+    .navbar__list {
+      padding-top: 0;
+
+      &--item {
+        margin-left: 32px;
+
+        &-underline {
+          margin-bottom: -22px;
+        }
+      }
+    }
+  }
 }
 
 
+
+.hero {
+  background-image: url(../assets/Images/hero-bio.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 44vh;
+  width: 100%;
+  &__heading {
+    font-weight: bold;
+    color: $text-color;
+    line-height: 44vh;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
 
 .footer{
     background-color: $back-color;
     color: $text-color;
-    padding: 30px 0 20px 20px;
+    padding-top: 2rem;
+    
     @include footer-body;
-   &__container{
-    &--item{
-        .footer--heading{
-            padding-bottom: 1rem;
-        }
-        .footer__icon:not(:first-child){
-            display: inline-block;
-            padding: 1rem;
-        }
+    &--heading{
+        font-weight: 700;
+        font-size: $headline-before-mobile;
+        padding: 2rem 0 2rem 1rem;
     }
 
+    &__container{
+        @include subheader_mobile;
+        &--icon{
+            display: inline;
+            margin: 1rem;
+        }
+        &--contact{
+            margin: 1rem;
+        }
+        &--name{
+            font-weight: 600;
+        }
+        &--rule{
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+        &--email{
+            margin-top: 1rem;
+        }
 
-   }
-}
-
-.hero{
-    background-image: url(../assets/Images/hero-bio.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 44vh;
-    width: 100%;
-    &__heading{
-        color: $text-color;
-        line-height: 44vh;
-        padding-left: 1rem;
-        
     }
+    &__logo{
+        margin: 5rem 0 1rem 1rem;
+    }
+    &__copy{
+        margin: 1rem;
+        padding-bottom: 1rem;
+    }
+  
+
+
+   
 }
+
+
 
