--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -8,8 +8,8 @@
         @content;
     }
 }
-@mixin dsektop{
-    @media (min-width: 1280px) {
+@mixin desktop{
+    @media (min-width: 1279px) {
         @content;
     }
 }
