--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -148,11 +148,16 @@ body {
     }
 
     &__container{
+       margin-left: 1rem;
         @include footer-copy-mobile;
         @include tablet{
+          margin-left: 2.25rem;
+          margin-right: 2.25rem;
             @include footer-body-tablet;
         }
         @include desktop{
+          margin-left: 2.25rem;
+          margin-right: 2.25rem;
             @include footer-body-tablet;
         }
 
@@ -214,6 +219,41 @@ body {
     }
 }
 
+.form{
+  &__container{
+    width: 100%;
+    padding: 0.75rem;
+    display: flex;
+    flex-direction: column;
+    
+    .container__name{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      &--img{
+        padding-right: 4px;
+      }
+      
+    }
+    
+  }
+  }
+  
+.name-box{
+  border-radius: 4px;
+  width: 100%;
+  height: 36px;
+}
 
+.msg-box{
+  border-radius: 4px;
+  width: 100%;
+  height: 38px;
 
+}
+.img{
+  border-radius: 50%;
+  width: 36px;
+  height: 36px;
+}
 
