--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -5,7 +5,7 @@ $text-color: #ffffff;
 $headline-after-mobile: 16px;
 $headline-before-mobile: 24px;
 $section-header-font-size: 24px;
-
+$raduis: 14px;
  
   
 
