--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -68,10 +68,14 @@
 
   .booking{
     width: 100%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    
     &__title{
         margin-top: 1.5rem;
         padding-bottom: 1rem;
-        padding-left: 1rem;
+        padding-top: 1rem;
+        padding-left: 10rem;
     }
     &__tablet{
         display: none;
@@ -80,6 +84,10 @@
             flex-direction: row;
             align-items: center; 
             padding-left: 1rem;
+            color: $foto-back-color;
+            justify-content: space-evenly;
+            padding-left: 20rem;
+        }
         }
         .show__header{
             @include tablet{
@@ -92,9 +100,11 @@
 
     }
 
-  }
+  
   .show{
+    margin-left: 22rem;
     padding: 1rem 1rem;
+    border-bottom: 0.125rem  solid $foto-back-color;
     @include tablet{
         padding: 0, 1.5rem;
         display: flex;
@@ -103,12 +113,41 @@
       
     }
     &__header--mobile{
-        color: blue;
-        padding-top: 1rem ;
+        color: $foto-back-color;
+        padding-top: 1rem;
         padding-bottom: 1rem;
         @include tablet{
             display: none;
         }
+    }
+    &__date{
+      @include tablet{
+        width: 25%;
+        font-weight: 600;
+      }
+    }
+    &__venue{
+      @include tablet{
+        width: 25%;
+      }
+    }
+    &__location{
+      @include tablet{
+        width: 25%;
+      }
+    }
+    &__btn{
+      height: 2.5rem;
+      width: 100%;
+      background-color: $back-color;
+      color: $text-color;
+      border-radius: 4px;
+      margin-top: 1rem;
+      margin-top: 1rem;
+      @include tablet{
+        width: 25%;
+      }
+      
     }
   }
  
