--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -181,6 +181,7 @@ body {
         position: relative;
         bottom: 19rem;
         left: 38rem;
+        display: inline-block;
     }
     .footer__copy{
         position: relative;
