--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,3 +1,27 @@
+@font-face {
+  font-family: 'avenir next';
+  src: 
+  url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("opentype"),
+  url("../../assets/Font/Alternative\ files/avenirNextLTProRegular.ttf") format("truetype");
+  font-weight: 400;
+}
+
+@font-face  {
+  font-family: 'avenir next';
+  src: 
+  url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("opentype"),
+  url("../../assets/Font/Alternative\ files/avenirNextLTProDemi.ttf") format("truetype");
+  font-weight: 600;
+}
+@font-face  {
+  font-family: 'avenir next';
+  src: 
+  url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("opentype"),
+  url("../../assets/Font/Alternative\ files/avenirNextLTProBold.ttf") format("truetype");
+  font-weight: 700;
+}
+
+
 @mixin mobile{
     @media (max-width: 767px) {
         @content;
@@ -35,8 +59,8 @@
 
 }   
  @mixin logo{
-    width: 20px;
-    height: 120px;
+    width: 1.25rem;
+    height: 7.5rem;
  }
 
 @mixin divider{
