--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -123,7 +123,7 @@
       
     }
     &__selected{
-      background-color: $form-bcolor;
+      background-color: $foto-back-color;
     }
     &__header--mobile{
         color: $foto-back-color;
