--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,24 +1,24 @@
-@import url("https://fonts.cdnfonts.com/css/avenir-lt-pro");
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("opentype"), url("../../assets/Font/Alternative files/avenirNextLTProRegular.ttf") format("truetype");
+  font-weight: 400;
+}
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("opentype"), url("../../assets/Font/Alternative files/avenirNextLTProDemi.ttf") format("truetype");
+  font-weight: 600;
+}
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("opentype"), url("../../assets/Font/Alternative files/avenirNextLTProBold.ttf") format("truetype");
+  font-weight: 700;
+}
 /**/
-/*
-@font-face {
-  font-family: "Avenir LT Pro";
-  font-weight: normal;
-  font-style: normal;
-  src: url(../../assets/Font/AvenirNextLTPro-Regular.otf) format("opentype");
-}
-
-@font-face {
-  font-family: "Avenir LT Pro";
-  font-weight: bold;
-  font-style: normal;
-  src: url(../../assets/Font/AvenirNextLTPro-Bold.otf) format("opentype");
-}
-*/
 * {
   box-sizing: border-box;
   margin: 0;
   text-decoration: none;
+  font-family: "avenir next";
 }
 
 body {
@@ -34,9 +34,31 @@ body {
   padding-bottom: 16px;
   text-align: center;
 }
+@media (min-width: 768px) {
+  .header {
+    padding-left: 2rem;
+  }
+}
+@media (min-width: 1279px) {
+  .header {
+    padding-left: 8rem;
+  }
+}
 .header__logo {
-  width: 20px;
-  height: 120px;
+  width: 1.25rem;
+  height: 7.5rem;
+}
+@media (min-width: 768px) {
+  .header__logo {
+    width: 2.25rem;
+    height: 8.5rem;
+  }
+}
+@media (min-width: 1279px) {
+  .header__logo {
+    width: 2.25rem;
+    height: 8.5rem;
+  }
 }
 .header .navbar__list {
   display: flex;
