sprint-3 final changes

--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -1,113 +1,105 @@
 @font-face {
-  font-family: 'avenir next';
-  src: 
-  url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("opentype"),
-  url("../../assets/Font/Alternative\ files/avenirNextLTProRegular.ttf") format("truetype");
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Regular.otf") format("opentype"),
+    url("../../assets/Font/Alternative\ files/avenirNextLTProRegular.ttf")
+      format("truetype");
   font-weight: 400;
 }
 
-@font-face  {
-  font-family: 'avenir next';
-  src: 
-  url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("opentype"),
-  url("../../assets/Font/Alternative\ files/avenirNextLTProDemi.ttf") format("truetype");
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Demi.otf") format("opentype"),
+    url("../../assets/Font/Alternative\ files/avenirNextLTProDemi.ttf")
+      format("truetype");
   font-weight: 600;
 }
-@font-face  {
-  font-family: 'avenir next';
-  src: 
-  url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("opentype"),
-  url("../../assets/Font/Alternative\ files/avenirNextLTProBold.ttf") format("truetype");
+@font-face {
+  font-family: "avenir next";
+  src: url("../../assets/Font/AvenirNextLTPro-Bold.otf") format("opentype"),
+    url("../../assets/Font/Alternative\ files/avenirNextLTProBold.ttf")
+      format("truetype");
   font-weight: 700;
 }
 
-
-@mixin mobile{
-    @media (max-width: 767px) {
-        @content;
-    }
+@mixin mobile {
+  @media (max-width: 767px) {
+    @content;
+  }
 }
-@mixin tablet{
-    @media (min-width: 768px) {
-        @content;
-    }
+@mixin tablet {
+  @media (min-width: 768px) {
+    @content;
+  }
 }
-@mixin desktop{
-    @media (min-width: 1279px) {
-        @content;
-    }
-}
-
-    
-@mixin header_mobile{
-    font-size: 2.5rem;
+@mixin desktop {
+  @media (min-width: 1279px) {
+    @content;
+  }
 }
 
-@mixin subheader_mobile{
-    font-size: 0.875rem;
-    line-height: 1.375rem;
-    
-
+@mixin header_mobile {
+  font-size: 2.5rem;
 }
- @mixin body-copy-mobile{
-    font-size: 0.813rem;
-    line-height: 1.125rem;
- }
- @mixin footer-copy-mobile{
-    font-size: 0.813rem;
-    line-height: 1.125rem;
 
-}   
- @mixin logo{
-    width: 1.25rem;
-    height: 7.5rem;
- }
+@mixin subheader_mobile {
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+}
+@mixin body-copy-mobile {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+}
+@mixin footer-copy-mobile {
+  font-size: 0.813rem;
+  line-height: 1.125rem;
+}
+@mixin logo {
+  width: 1.25rem;
+  height: 7.5rem;
+}
 
-@mixin divider{
-    stroke-width: 1px;
-    color: #e1e1e1
+@mixin divider {
+  stroke-width: 1px;
+  color: #e1e1e1;
 }
 
 /**/
-@mixin page-tablet{
-    font-size: 3.75rem;
+@mixin page-tablet {
+  font-size: 3.75rem;
 }
 @mixin header_tablet {
-    font-size: 2.25rem;
-    line-height: 2.75rem;
-   
-  }
-  
-  @mixin subheader_tablet {
-    font-size: 1.5rem;
-    line-height: 2rem;
-    
-  }
-  @mixin body-copy_tablet {
-    font-size: 0.875;
-    line-height: 1.25rem;
-    font-weight: 400;
-  }
-  
-  @mixin footer-body-tablet {
-    font-size: 0.875rem;
-    line-height: 1,25rem;
-  }
-  
-  @mixin divider {
-    stroke-width: 1px;
-    color: #e1e1e1;
-  }
-  @mixin size-between-tablet{
-    margin-right: 2.25rem;
-    margin-left: 2.25rem;
-  }
-  @mixin size-between-desktop{
-    margin-right: auto;
-    margin-left: auto;
-  }
-  @mixin flex{
-    display: flex;
-    flex-direction: row;
-  }
-  
+  font-size: 2.25rem;
+  line-height: 2.75rem;
+}
+
+@mixin subheader_tablet {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+@mixin body-copy_tablet {
+  font-size: 0.875;
+  line-height: 1.25rem;
+  font-weight: 400;
+}
+
+@mixin footer-body-tablet {
+  font-size: 0.875rem;
+  line-height: 1, 25rem;
+}
+
+@mixin divider {
+  stroke-width: 1px;
+  color: #e1e1e1;
+}
+@mixin size-between-tablet {
+  margin-right: 2.25rem;
+  margin-left: 2.25rem;
+}
+@mixin size-between-desktop {
+  margin-right: auto;
+  margin-left: auto;
+}
+@mixin flex {
+  display: flex;
+  flex-direction: row;
+}
