--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,22 +1,16 @@
 @use "variables" as *;
 @use "mixins.scss" as *;
 
-
-
-
 * {
   box-sizing: border-box;
   margin: 0;
   text-decoration: none;
-  font-family: 'avenir next';
-
+  font-family: "avenir next";
 }
 
 body {
   font-family: $font-family;
-
 }
-
 
 .header {
   background-color: $back-color;
@@ -26,29 +20,26 @@ body {
   padding-top: $headline-before-mobile;
   padding-bottom: $headline-after-mobile;
   text-align: center;
-  @include tablet{
+  @include tablet {
     padding-left: 2rem;
-  };
-  @include desktop{
+  }
+  @include desktop {
     padding-left: 8rem;
-  };
-
-  
+  }
 
   &__logo {
     @include logo;
-    @include tablet{
+    @include tablet {
       width: 2.25rem;
       height: 8.5rem;
-    };
-    @include desktop{
+    }
+    @include desktop {
       width: 2.25rem;
       height: 8.5rem;
-    };
-
+    }
   }
 
-.navbar__list {
+  .navbar__list {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -56,30 +47,22 @@ body {
     list-style: none;
     padding: 0;
     padding-top: 1rem;
-  
 
     &--item {
       width: 50%;
       font-weight: 400;
-      
-      a{
+
+      a {
         color: $foto-back-color;
       }
-    
-    
-      
+
       &-underline {
         border-bottom: 4px solid $text-color;
         font-weight: 600;
         padding-left: 0;
         margin-bottom: -1rem;
-      
-       
       }
-     
     }
-  
-    
   }
 
   @include tablet {
@@ -104,101 +87,87 @@ body {
   }
 }
 
+.footer {
+  background-color: $back-color;
+  color: $text-color;
+  padding-top: 2rem;
+  font-family: $font-family;
 
+  &--heading {
+    font-weight: 400;
+    font-size: $headline-before-mobile;
+    padding: 2rem 0 2rem 1rem;
 
+    @include tablet {
+      @include subheader_tablet;
+    }
+    @include desktop {
+      @include subheader_tablet;
+    }
+  }
 
-
-.footer{
-    background-color: $back-color;
-    color: $text-color;
-    padding-top: 2rem;
-    font-family: $font-family;
-    
-    &--heading{
-        font-weight: 700;
-        font-size: $headline-before-mobile;
-        padding: 2rem 0 2rem 1rem;
-        @include subheader_mobile;
-        @include tablet{
-            @include subheader_tablet;
-        }
-        @include desktop{
-            @include subheader_tablet;
-        }
+  &__container {
+    margin-left: 1rem;
+    @include footer-copy-mobile;
+    @include tablet {
+      margin-left: 2.25rem;
+      margin-right: 2.25rem;
+      @include footer-body-tablet;
+    }
+    @include desktop {
+      margin-left: 2.25rem;
+      margin-right: 2.25rem;
+      @include footer-body-tablet;
     }
 
-    &__container{
-       margin-left: 1rem;
-        @include footer-copy-mobile;
-        @include tablet{
-          margin-left: 2.25rem;
-          margin-right: 2.25rem;
-            @include footer-body-tablet;
-        }
-        @include desktop{
-          margin-left: 2.25rem;
-          margin-right: 2.25rem;
-            @include footer-body-tablet;
-        }
-
-        &--icon{
-            display: inline;
-            margin: 1rem;
-        }
-        &--contact{
-            margin: 1rem;
-        }
-        &--name{
-            font-weight: 600;
-        }
-        &--rule{
-            font-weight: 600;
-            margin-bottom: 1rem;
-        }
-        &--email{
-            margin-top: 1rem;
-        }
-
+    &--icon {
+      display: inline;
+      margin: 1rem;
     }
-    &__logo{
-        margin: 5rem 0 1rem 1rem;
+    &--contact {
+      margin: 1rem;
     }
-    &__copy{
-        margin: 1rem;
-        padding-bottom: 1rem;
+    &--name {
+      font-weight: 600;
     }
-  
-
-
-   
+    &--rule {
+      font-weight: 600;
+      margin-bottom: 1rem;
+    }
+    &--email {
+      margin-top: 1rem;
+    }
+  }
+  &__logo {
+    margin: 5rem 0 1rem 1rem;
+  }
+  &__copy {
+    margin: 1rem;
+    padding-bottom: 1rem;
+  }
 }
-@include tablet{
-    .footer__container--box{
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        
-        
-    }
-    .footer__logo{
-        position: relative;
-        bottom: 19rem;
-        left: 38rem;
-        display: inline-block;
-    }
-    .footer__copy{
-        position: relative;
-        bottom: 4rem;
-        
-    }
+@include tablet {
+  .footer__container--box {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
+  }
+  .footer__logo {
+    position: relative;
+    bottom: 19rem;
+    left: 38rem;
+    display: inline-block;
+  }
+  .footer__copy {
+    position: relative;
+    bottom: 4rem;
+  }
 }
-@include desktop{
-    .footer__logo{
-        position: relative;
-        bottom: 19rem;
-        left: 67rem;
-    }
+@include desktop {
+  .footer__logo {
+    position: relative;
+    bottom: 19rem;
+    left: 60rem;
+  }
 }
-
-
-
